<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Treinamento</string>
    <string name="hello_world">Hello World</string>

    <!-- Strings usadas em menus -->
    <string name="menu_novo">Novo</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_excluir">Excluir</string>

    <!-- Strings usandas em hints -->
    <string name="hint_nome">Nome</string>
    <string name="hint_endereco">Endereço</string>
    <string name="hint_telefone">Telefone</string>
    <string name="hint_site">Site</string>

    <!-- Strings usadas em atributos text -->
    <string name="text_meu_botao">Meu Botão!</string>
    <string name="text_salvar">Salvar</string>
    <string name="text_filtrar">Filtrar</string>

    <!-- Strings usadas em toasts -->
    <string name="toast_voce_digitou">Você digitou: %s</string>
    <string name="toast_voce_clicou_na_posicao">Você clicou na posição: %d</string>
    <string name="toast_voce_clicou_no">Você clicou no %s</string>
    <string name="toast_nenhum_contato">Nenhum contato encontrado para o filtro.</string>

    <!-- Strings usadas nos erros -->
    <string name="erro_preenchimento_obrigatorio">Preenchimento obrigatório</string>

    <!-- Strings usadas nas dialogs -->
    <string name="dialog_sim">Sim</string>
    <string name="dialog_mensagem">Deseja excluir o contato %s?</string>
    <string name="dialog_nao">Não</string>
    <string name="dialog_confirmacao">Confirmação</string>

    <!-- Strings usadas nas dialogs -->
    <string name="subtitle_lista_contatos_activity">Lista de Contatos</string>
    <string name="subtitle_contato_activity_incluir">Incluir Contato</string>
    <string name="subtitle_contato_activity_editar">Alterar Contato</string>
    <string name="subtitle_filtrar_contatos">Filtrar Contatos</string>

</resources>
